tests/multiplatform_haste_incremental/multiplatform_haste_incremental.exp
We start with an interface conformance error in Android file
Error ------------------------------------------------------------------------------------------------ A.android.js:1:38

Cannot conform to common interface module because string [1] is incompatible with number [2] in the return value of
property `default`. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [incompatible-type]

   A.android.js:1:38
   1| declare export default function A(): string;
                                           ^^^^^^ [1]

References:
   A.js.flow:1:38
   1| declare export default function A(): number;
                                           ^^^^^^ [2]



Found 1 error



Fix the interface conformance error in Android file
All interface conformance errors are fixed.
No errors!



Introduce an interface conformance error in iOS file
Now we have an interface conformance error in iOS file.
Error ---------------------------------------------------------------------------------------------------- A.ios.js:1:38

Cannot conform to common interface module because string [1] is incompatible with number [2] in the return value of
property `default`. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [incompatible-type]

   A.ios.js:1:38
   1| declare export default function A(): string;
                                           ^^^^^^ [1]

References:
   A.js.flow:1:38
   1| declare export default function A(): number;
                                           ^^^^^^ [2]



Found 1 error



Change interface file to get a different set of conformance errors
Now we have an interface conformance error in Android file, but not in iOS file.
Error ------------------------------------------------------------------------------------------------ A.android.js:1:38

Cannot conform to common interface module because number [1] is incompatible with string [2] in the return value of
property `default`. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [incompatible-type]

   A.android.js:1:38
   1| declare export default function A(): number;
                                           ^^^^^^ [1]

References:
   A.js.flow:1:38
   1| declare export default function A(): string;
                                           ^^^^^^ [2]



Found 1 error
